test/fail/vt_list_infer01.v3
//@seman
type List<T> {
	case Nil;
	case Cons(head: T, tail: List<T>);
}
def cons1<T>(x: T) -> List<T> {
	return List.Cons(x, List.Nil);
}
